[gd_scene load_steps=5 format=3 uid="uid://cafbq0vd7w5es"]

[ext_resource type="Script" path="res://src/characters/enemy.gd" id="1_aklnf"]
[ext_resource type="PackedScene" uid="uid://rq8a5oiksov0" path="res://src/ui/unit_ui.tscn" id="3_kj5hv"]
[ext_resource type="Texture2D" uid="uid://ctnawnjqtoylk" path="res://icon.svg" id="3_veykt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6l4ry"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_veykt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_aklnf")

[node name="EnemyUI" parent="." instance=ExtResource("3_kj5hv")]
visible = false
offset_top = 144.0
offset_bottom = 144.0

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
position = Vector2(160, 64)
sprite_frames = SubResource("SpriteFrames_6l4ry")

[node name="EnemyHover" type="Control" parent="EnemySprite"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="EnemySprite/EnemyHover" to="." method="_on_enemy_hover_mouse_entered"]
[connection signal="mouse_exited" from="EnemySprite/EnemyHover" to="." method="_on_enemy_hover_mouse_exited"]
